User Dashboard Foundation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
       </ul>
       
         <button class="btn btn-outline-warning my-2 my-sm-0" (click)="logout()">Sign Out</button>
-        <h5 style="color: white; padding-left: 30px;">Welcome {{currentUser.username}}</h5>
+        <h5 style="color: white; padding-left: 30px;">Signed in as: {{currentUser.username}}</h5>
     </div>
   </nav>
   <div class="col-lg-12" id="routerDiv">
