--- a/src/app/modules/user-dashboard/user-dashboard/user-dashboard.component.html
+++ b/src/app/modules/user-dashboard/user-dashboard/user-dashboard.component.html
@@ -1,3 +1,7 @@
-<p>
-  user-dashboard works!
-</p>
+<div class="container-fluid">
+  <div class="row" style="margin-top:25px;">
+    <div class="col-lg-12">
+        <h2 style="text-align: center">Welcome back, {{currentUser?.firstName}}</h2>
+    </div>
+  </div>
+</div>
