Edits from meeting with mike - check notes osx

--- a/src/app/modules/auction/components/auction-bid-list/auction-bid-list.component.html
+++ b/src/app/modules/auction/components/auction-bid-list/auction-bid-list.component.html
@@ -9,7 +9,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let bid of bids.slice().reverse()" [class.my-bid]="bid.ownerId == currentUser._id">
+            <tr *ngFor="let bid of bids.slice().reverse()" [class.my-bid]="bid.userId == currentUser._id">
                 <td>{{bid.date | date: 'M/d/yy, h:mm:ss a'}}</td>
                 <td>{{bid.pps}}</td>
                 <td>{{bid.numShares}}</td>
